--- a/package.json
+++ b/package.json
@@ -2,17 +2,60 @@
   "name": "avalanche",
   "version": "0.1.0",
   "private": true,
+  "keywords": [],
+  "author": "vshakhov",
+  "license": "MIT",
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.18.1",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^6.9.0",
+    "eslint-config-react-app": "^0.6.2",
+    "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "gh-pages": "^0.11.0",
+    "html-webpack-plugin": "2.28.0",
+    "html-webpack-template": "6.0.1",
+    "isparta-loader": "^2.0.0",
+    "karma": "^1.0.0",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.5.3",
+    "npm-install-webpack-plugin": "4.0.4",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "react-addons-perf": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
+    "style-loader": "^0.13.2",
+    "sass-loader": "^6.0.0",
+    "node-sass": "^4.5.1",
+    "webpack": "^2.1.2",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^0.14.1",
+    "webpack-validator": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "stats": "webpack --profile --json > stats.json",
+    "start": "webpack-dev-server --hot --inline",
+    "deploy": "gh-pages -d build",
+    "build": "webpack",
+    "test": "karma start",
+    "test:tdd": "npm run test -- --auto-watch --no-single-run",
+    "test:lint": "eslint ./app ./tests --ext .js --ext .jsx --ignore-path .gitignore --ignore-pattern dist --cache"
   }
 }
