--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "vshakhov",
   "license": "MIT",
   "dependencies": {
+    "react-bootstrap": "^0.30.8",
+    "leaflet": "^1.0.3",
+    "leaflet-providers": "^1.1.16",
+    "react-leaflet": "^1.1.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
