--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "leaflet-providers": "^1.1.16",
     "react-leaflet": "^1.1.4",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
+
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
