--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [ "es2015", "react" ],
+  "presets": [ "es2015", "stage-0", "react" ],
   "env": {
     "start": {
       "presets": [
@@ -7,7 +7,7 @@
       ]
     }
   },
-  "plugins": ["transform-react-jsx"],
+  "plugins": ["transform-class-properties", "transform-react-jsx"],
   "ignore": [
     "foo.js",
     "bar/**/*.js"
