--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "homepage": "https://shakhovv.github.io/avalanche/",
   "dependencies": {
+    "async": "^2.3.0",
+    "axios": "^0.16.1",
     "react-bootstrap": "^0.30.8",
     "leaflet": "^1.0.3",
     "leaflet-providers": "^1.1.16",
@@ -14,7 +16,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
@@ -24,6 +27,8 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.23.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.23.1",
     "eslint": "^3.18.1",
